--- a/frames/torrents.html
+++ b/frames/torrents.html
@@ -133,6 +133,10 @@
                             <a class="menuSeries" href="#">
                                 <span class="glyphicon glyphicon-expand"></span></a>
                         </li>
+                        <li id="side-bar-li-animes" onclick="main.changeFrame('animes')">
+                            <a class="menuAnimes" href="#">
+                                <span class="glyphicon glyphicon-globe"></span></a>
+                        </li>
                         <li id="side-bar-li-torrents" class="on" onclick="main.changeFrame('torrents')">
                             <a class="menuTorrents" href="#">
                                 <span class="glyphicon glyphicon-th-list"></span></a>
@@ -158,6 +162,11 @@
                         <li id="side-bar-li-series-sm" onclick="main.changeFrame('series')">
                             <a href="#">
                                 <span class="glyphicon glyphicon-expand"></span>
+                            </a>
+                        </li>
+                        <li id="side-bar-li-animes-sm" onclick="main.changeFrame('animes')">
+                            <a href="#">
+                                <span class="glyphicon glyphicon-globe"></span></a>
                             </a>
                         </li>
                         <li id="side-bar-li-torrents-sm" class="on" onclick="main.changeFrame('torrents')">
