Add inital remote support

--- a/frames/movies.html
+++ b/frames/movies.html
@@ -17,6 +17,7 @@
             var main = require('../js/main.js');
             var callwcf = require('../js/callwcf.js');
             var gui = require('nw.gui');
+            var remote = require('../js/remote.js');
             var yifysubtitle = require('../js/yifysubtitle.js');
             var favorites = require('../js/favorites.js');
             var translations = require('../js/translations.js');
