Add basic keyboard support

--- a/frames/movies.html
+++ b/frames/movies.html
@@ -11,6 +11,9 @@
         <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
         <script src="../js/extensions/jquery.isotope.min.js"></script>
         <script src="../js/extensions/nwcontextmenu.js"></script>
+        <script src="../js/extensions/mousetrap.min.js"></script>
+
+        <script src="../js/keyboard.js"></script>
 
         <!-- Modules -->
         <script>
