Fix favorite section bug for animes

--- a/frames/favorites.html
+++ b/frames/favorites.html
@@ -488,7 +488,7 @@
                                     });
 
                                     $("#anime-btnEpisodeList").click(function () {
-                                        main.go("players/serie-player.html?animeId=" + anime.id);
+                                        main.go("players/anime-player.html?animeId=" + anime.id);
                                     });
 
                                     $("#content-overlay").show();
