--- a/frames/players/series-player.html
+++ b/frames/players/series-player.html
@@ -279,8 +279,7 @@ function startDefaultPlayer()
     });
 }
 
-function startXBMCPlayer()
-{
+function startXBMCPlayer() {
     $("#btnDefaultPlayer").removeClass("hide");
     $("#btnVLC").removeClass("hide");
 
